# isaacsim-mcp-server

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE_HEADER.py  LICENSE_README.md  README.md  SECURITY.md  add_license_headers.py  pyproject.toml  ruff.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: release.yml
demo/: franka_pick_place.py  franka_pick_place.usd
docs/superpowers/plans/: 2026-03-31-modular-mcp-tools.md  2026-04-02-pypi-cd-marketplace.md  2026-04-07-physics-observe-reliability-fixes.md
docs/superpowers/specs/: 2026-04-02-pypi-cd-marketplace-design.md
isaac.sim.mcp_extension/: .cursorrules
isaac.sim.mcp_extension/config/: extension.toml
isaac.sim.mcp_extension/examples/: franka.py  franka_grid.py  g1.py  go1.py
isaac.sim.mcp_extension/isaac_sim_mcp_extension/: __init__.py  extension.py  gen3d.py  socket_server.py  usd.py
isaac.sim.mcp_extension/isaac_sim_mcp_extension/adapters/: __init__.py  base.py  v5.py
isaac.sim.mcp_extension/isaac_sim_mcp_extension/handlers/: __init__.py  assets.py  graphs.py  lighting.py  robots.py  (+5 more)
isaac_mcp/: __init__.py  connection.py  server.py
isaac_mcp/tools/: __init__.py  assets.py  graphs.py  lighting.py  materials.py  objects.py  robots.py  scene.py  sensors.py  simulation.py
scripts/: dev_mcp_server.sh  launch_isaac_sim_mcp.sh  run_isaac_sim.sh  run_mcp_server.sh  setup_python_env.sh
tests/: __init__.py  test_connection.py  test_handler_structure.py  test_integration.py  test_tool_registration.py
